ros2_ws/log/build_2025-06-12_08-56-31/position_publisher/stderr.log
  File "/home/strain-drone/Documents/drone_position_hold/ros2_ws/install/position_publisher/lib/python3.12/site-packages/position_publisher/position_publisher.py", line 119
    covariance = [
                 ^
SyntaxError: '[' was never closed

